# DataEngineeringITMO2025

./: .gitignore  README.md  data_loader.py  gitignore  notebooks.EDA.ipynb  pyproject.toml  write_to_db.py
etl/: extract.py  load.py  main.py  transform.py  validate.py
experiments/: data_loader.py
